# szwch

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
apps/entrypoint/: apps.py  urls.py  views.py
apps/shortener/: models.py  utils.py
apps/shortener/api_v1/: serializers.py  urls.py  views.py
apps/shortener/migrations/: 0001_initial.py
szwch/: asgi.py  settings.py  urls.py
